@@ -1,12 +1,10 @@
 package com.han.hero.framework.security;
 
-import com.han.hero.project.domain.Menu;
 import com.han.hero.project.domain.Role;
 import com.han.hero.project.domain.User;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
-import org.apache.commons.lang3.StringUtils;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -14,7 +12,6 @@ import org.springframework.security.core.userdetails.UserDetails;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Data
 @NoArgsConstructor
@@ -25,7 +22,7 @@ public class LoginUser implements UserDetails {
 
     private List<Role> roles;
 
-    private List<Menu> menus;
+    private List<String> perms;
 
     /**
      * spring security 中的对于ROLE_字符串的权限有特殊处理  对于这种字符串可以使用 @PreAuthorize("hasRole('super')") 注解
@@ -33,10 +30,8 @@ public class LoginUser implements UserDetails {
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
         List<GrantedAuthority> authorities = new ArrayList<>();
-        authorities.addAll(roles.stream().map(role -> new SimpleGrantedAuthority("ROLE_" + role.getCode())).collect(Collectors.toList()));
-        authorities.addAll(menus.stream()
-                .filter(menu -> StringUtils.isNotBlank(menu.getPerms()))
-                .map(menu -> new SimpleGrantedAuthority(menu.getPerms())).collect(Collectors.toList()));
+        authorities.addAll(roles.stream().map(role -> new SimpleGrantedAuthority("ROLE_" + role.getCode())).toList());
+        authorities.addAll(perms.stream().map(SimpleGrantedAuthority::new).toList());
         return authorities;
     }
 
